--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item" style="overflow-x:visible; color: whites;">
-              <a class="nav-link" href="rti.html">RTI</a>
+              <a class="nav-link" href="/rti.html">RTI</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Enforcement Data</a>
