--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body style="background-color: darkgray;">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand -->
         <a class="navbar-brand" href="#">Citizens</a>
       
