--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a class="nav-link" href="#" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="font-size: 25px; color: black; background-color: burlywood;">Register a Complaint</a>
+          <a class="nav-link" href="aamirmir001.github.io/complaint.html" style="font-size: 25px; color: black; background-color: burlywood;">Register a Complaint</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact us.html" style="font-size: 25px; color: black;background-color: turquoise;">Contact Us</a>
