--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     .row {
         color: white;
     }
+  @media only screen and (max-width:800px) {
+  /* For tablets: */
+  .main {
+    width: 80%;
+    padding: 0;
+  }
+  .right {
+    width: 100%;
+  }
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+  }
 </style>
 </head>
 <body style="background-color: darkgray;">
