--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
           </ul>
         </div> 
       </nav> 
-
+<div class="main">
 <div class="jumbotron text-center">
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Union Territory of Jammu & Kashmir</h1>
   <h2 class="display-5">Department of Legal Metrology Kashmir</h2>
   <p>An Aware Consumer is an Asset</p> 
 </div>
+  </div>
 </div>
 <style>
     .nav {
