--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           </ul>
         </div> 
       </nav> 
-<div class="main">
 <div class="jumbotron text-center">
+  <div class="main"
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Union Territory of Jammu & Kashmir</h1>
   <h2 class="display-5">Department of Legal Metrology Kashmir</h2>
@@ -69,6 +69,7 @@
         padding-top: 0px; padding-inline-start: 10px; border-top: 20px;
     }
 </style>
+<div class="main">
   <div class="container-fluid width:100%">
     <ul class="nav justify-content-center">
     <ul class="nav">
@@ -87,6 +88,7 @@
         </li>
       </ul>
   </div>
+      </div>
   
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 30px;"><br><br>Reach Us</h1>
