--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div> 
       </nav> 
 <div class="jumbotron text-center">
-  <div class="main"
+  <div class="main">
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Union Territory of Jammu & Kashmir</h1>
   <h2 class="display-5">Department of Legal Metrology Kashmir</h2>
