--- a/complaint.html
+++ b/complaint.html
@@ -50,7 +50,7 @@
 <body style="font-family:Verdana;">
 
 <div style="background-color:#f1f1f1;padding:15px;">
-  <div class="display-4">Department of Legal Metrology Kashmir</div>
+  <h2 class="display-4">Department of Legal Metrology Kashmir</h2>
   <h3>Resize the browser window</h3>
 </div>
 
