--- a/complaint.html
+++ b/complaint.html
@@ -69,7 +69,7 @@
   </div>
 
   <div class="right">
-    <h2>What?</h2>
+    <h2 class="display-2">What?</h2>
     <p>Cinque Terre comprises five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore.</p>
     <h2>Where?</h2>
     <p>On the northwest cost of the Italian Riviera, north of the city La Spezia.</p>
