--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div> 
       </nav> 
 <div class="jumbotron text-center">
-    <div class="container p-4 my-3 bg-grey text-black">
+    <div class="container">
         <h1 class="display-3">Union Territory of Jammu & Kashmir</h1>
   <h2 class="display-5">Department of Legal Metrology Kashmir</h2>
   <p>An Aware Consumer is an Asset</p> 
