--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   }
 </style>
 </head>
-<body style="background-color: darkgray;">
+<body style="background-color: darkgray;width:100;">
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand -->
         <a class="navbar-brand" href="#">Citizens</a>
