--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 25px; display: block; border-width: thick; border-color: black; color: white;">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">Gallery</a>
+          <a class="nav-link" href="aamirmir001.github.io/gallery.html" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">Gallery</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="aamirmir001.github.io/complaint.html" style="font-size: 25px; color: black; background-color: burlywood;">Register a Complaint</a>
