--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav> 
 <div class="jumbotron text-center">
     <div class="container">
-        <h1 class="display-3">I Love You Sana</h1>
+        <h1 class="display-3">Union Territory of Jammu and Kashmir</h1>
   <h2 class="display-5">Department of Legal Metrology Kashmir</h2>
   <p>An Aware Consumer is an Asset</p> 
 </div>
