--- a/index.html
+++ b/index.html
@@ -74,16 +74,8 @@
       </div>
   
 <div class="container-fluid">
-    <h1 style="font-style: normal; font-size: 30px;"><br><br>Reach Us</h1>
-    <p></p>
-    <div class="row">
-      <div class="col" style= "line-height: 15px; word-wrap: normal;text-align: center;">Address:<br>SDA Colony near Directorate of Economics and Statistics Bemina Srinagar<br>Kashmir <br>190018</div>
-      <div class="col" style="line-height: 15px; text-align: center;"><br>Contact Us:<br><br>Email:dclmkenf@gmail.com<br>Telephone-0194-2490390</div>
-      <div class="col" style="font-size: 15px; text-align: center; font-weight: bolder;color: white;text-align: center;"><br>Visit Us</div>
-    </div>
-  </div>
-  <hr width=”200″>
-  <br>
+    <h1 style="font-style: normal; font-size: 30px;text-align:center;"><br><br>Reach Us</h1>
+  <Address style="font-size:30px;text-align:center;font:serif;width:100%;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar</address>
 
   <div class="container">
     <h1>Our Work</h1>
