--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </div>
   
 <div class="container-fluid">
-    <h1 style="font-style: normal; font-size: 30px;text-align:center;"><br><br>Reach Us</h1>
-  <Address style="font-size:30px;text-align:center;font:serif;width:100%;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar</address>
+    <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
+  <Address style="font-size:10px;text-align:center;font:serif;width:100%;color:white;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar</address>
 
   <div class="container">
     <h1>Our Work</h1>
