--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
   
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
-  <Address style="font-size:10px;text-align:center;font:serif;width:100%;color:white;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar</address>
-
+  <Address style="font-size:20px;text-align:center;font:serif;width:100%;color:white;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar</address>
+<h2 style="font-size:30px;text-height:50px;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar-190018</h2>
+  <h3 style="font-size:60px;text-height:50px;">Contact</h3>
+  <p>Phone: 0194-2490390 <br>Email: dclmkenf@gmail.com</p>
+  
   <div class="container">
     <h1>Our Work</h1>
     <p>A department that deals with the legal aspects of weights and measures and the offence committed in a transcation:</p>
