--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
 <h2 style="font-size:20px;text-height:50px;text-align:center;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar-190018</h2>
-  <h3 style="font-size:30px;text-height:50px;text-align:center;">Contact</h3>
+  <h3 style="font-size:30px;text-height:50px;text-align:center;font-weight:bold;">Contact</h3>
   <p style="font:cursive;font-size:20px;text-align:center;">Phone: 0194-2490390 <br>Email: dclmkenf@gmail.com</p>
-  
+  <br>
+  <br>
+  <hr style="width:40px;height:50px;">
   <div class="container">
     <h1>Our Work</h1>
     <p>A department that deals with the legal aspects of weights and measures and the offence committed in a transcation:</p>
