--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         color: white;
     }
   }
+  .icon-bar {
+  width: 90px; /* Set a specific width */
+  background-color: #555; /* Dark-grey background */
+}
+
+.icon-bar a {
+  display: block; /* Make the links appear below each other instead of side-by-side */
+  text-align: center; /* Center-align text */
+  padding: 16px; /* Add some padding */
+  transition: all 0.3s ease; /* Add transition for hover effects */
+  color: white; /* White text color */
+  font-size: 36px; /* Increased font-size */
+}
+
+.icon-bar a:hover {
+  background-color: #000; /* Add a hover color */
+}
+
+.active {
+  background-color: #4CAF50; /* Add an active/current color */
+}
 </style>
 </head>
 <body style="background-color: darkgray;width:100;">
@@ -72,7 +93,16 @@
       </ul>
   </div>
       </div>
-  
+  <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="icon-bar">
+  <a class="active" href="#"><i class="fa fa-home"></i></a> 
+  <a href="#"><i class="fa fa-search"></i></a> 
+  <a href="#"><i class="fa fa-envelope"></i></a> 
+  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-trash"></i></a> 
+</div>
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
 <h2 style="font-size:20px;text-height:50px;text-align:center;">SDA Colony Bemina near Directorate of Economics and Statistics Srinagar-190018</h2>
