--- a/index.html
+++ b/index.html
@@ -76,34 +76,16 @@
         padding-top: 0px; padding-inline-start: 10px; border-top: 20px;
     }
 </style>
-  <div class="container-fluid width:100%">
-    <ul class="nav justify-content-center">
-    <ul class="nav">
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-          <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 25px; display: block; border-width: thick; border-color: black; color: white;">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aamirmir001.github.io/html" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aamirmir001.github.io/complaint.html" style="font-size: 25px; color: black; background-color: burlywood;">Register a Complaint</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact us.html" style="font-size: 25px; color: black;background-color: turquoise;">Contact Us</a>
-        </li>
-      </ul>
-  </div>
-      </div>
+
   <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="icon-bar">
   <a class="active" href="#"><i class="fa fa-home"></i></a> 
-  <a href="#"><i class="fa fa-search"></i></a> 
-  <a href="#"><i class="fa fa-envelope"></i></a> 
-  <a href="#"><i class="fa fa-globe"></i></a>
-  <a href="#"><i class="fa fa-trash"></i></a> 
+  <a href="#"><i class="fa fa-book"></i>Act & Rules</a> 
+  <a href="#"><i class="fa fa-menu"></i>Departments</a> 
+  <a href="#"><i class="fa fa-globe">Blog</i></a>
+  <a href="#"><i class="fa fa-phone">Contact Us</i></a> 
 </div>
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
