--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
 
 <div class="icon-bar">
   <a class="active" href="#"><i class="fa fa-home"></i></a> 
-  <a href="#"><i class="fa fa-book"></i>Act & Rules</a> 
-  <a href="#"><i class="fa fa-menu"></i>Departments</a> 
-  <a href="#"><i class="fa fa-globe">Blog</i></a>
-  <a href="#"><i class="fa fa-phone">Contact Us</i></a> 
+  <a href="#"><i class="fa fa"></i>Circulars & Orders</a> 
+  <a href="#"><i class="fa fa"></i>Act & Rules</a> 
+  <a href="#"><i class="fa fa">Traders Corner</i></a>
+  <a href="#"><i class="fa ">Statistics</i></a> 
+  <a href="#"><i class="fa ">Consumer Corner</i></a>
+  <a href="#"><i class="fa ">Latest</i></a>
 </div>
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
