--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@
   <a class="active" href="#"><i class="fa fa-home"></i></a> 
   <a href="#"><i class="fa fa"></i>Circulars & Orders</a> 
   <a href="#"><i class="fa fa"></i>Act & Rules</a> 
-  <a href="#"><i class="fa fa">Traders Corner</i></a>
-  <a href="#"><i class="fa ">Statistics</i></a> 
-  <a href="#"><i class="fa ">Consumer Corner</i></a>
-  <a href="#"><i class="fa ">Latest</i></a>
+  <a href="#"><i class="fa fa"></i>Department</i></a>
+  <a href="#"><i class="fa "></i>Employee Login</i></a> 
 </div>
 <div class="container-fluid">
     <h1 style="font-style: normal; font-size: 60px;text-align:center;text-height:50px;"><br><br>Reach Us</h1>
