--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
   }
   .icon-bar {
-  width: 20%; /* Full-width */
+  width: 100%; /* Full-width */
   background-color: #555; /* Dark-grey background */
   overflow: auto; /* Overflow due to float */
 }
@@ -22,11 +22,11 @@
 .icon-bar a {
   float: left; /* Float links side by side */
   text-align: center; /* Center-align text */
-  width: 12%; /* Equal width (5 icons with 20% width each = 100%) */
-  padding: 6px 0; /* Some top and bottom padding */
+  width: 100%; /* Equal width (5 icons with 20% width each = 100%) */
+  padding: 16px 0; /* Some top and bottom padding */
   transition: all 0.3s ease; /* Add transition for hover effects */
-  color: white; /* White text color */
-  font-size: 20px; /* Increased font size */
+  color: black; /* White text color */
+  font-size: 25px; /* Increased font size */
 }
 
 .icon-bar a:hover {
