--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   float: left; /* Float links side by side */
   text-align: center; /* Center-align text */
   width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
-  padding: 16px 0; /* Some top and bottom padding */
+  padding: 6px 0; /* Some top and bottom padding */
   transition: all 0.3s ease; /* Add transition for hover effects */
-  color: black; /* White text color */
-  font-size: 36px; /* Increased font size */
+  color: white; /* White text color */
+  font-size: 20px; /* Increased font size */
 }
 
 .icon-bar a:hover {
