--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   width: 100%; /* Full-width */
   background-color: #555; /* Dark-grey background */
   overflow: auto; /* Overflow due to float */
+  margin-top:5px; /* margin align
 }
 
 .icon-bar a {
