--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   width: 100%; /* Full-width */
   background-color: #555; /* Dark-grey background */
   overflow: auto; /* Overflow due to float */
-  margin-top:5px; /* margin align
 }
 
 .icon-bar a {
@@ -28,6 +27,7 @@
   transition: all 0.3s ease; /* Add transition for hover effects */
   color: white; /* White text color */
   font-size: 20px; /* Increased font size */
+  height:20%;
 }
 
 .icon-bar a:hover {
