--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
   padding: 6px 0; /* Some top and bottom padding */
   transition: all 0.3s ease; /* Add transition for hover effects */
-  color: black; /* White text color */
+  color: green; /* White text color */
   font-size: 20px; /* Increased font size */
   height:20%;
 }
