--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
   color:white;
-  background-image: url("D:/MyPersonalWeb/icon.jpg");
+  background-image: url("aamirmir001.github.io/icon.jpg");
   padding: 190px 0px 190px 0px;
   background-size: 100%;
   text-shadow: 200px;
