--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 
 /* Responsive columns */
 @media screen and (max-width: 600px) {
-  .column {
+  .column,body {
     width: 100%;
     display: block;
     margin-bottom: 20px;
@@ -62,6 +62,7 @@ body {
   padding: 190px 0px 190px 0px;
   background-size: 100%;
   text-shadow: 200px;
+  background-repeat:no-repeat:
   
   
 }
