--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 
 /* Responsive columns */
 @media screen and (max-width: 600px) {
-  .column,body {
+  .column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
