--- a/organisation.html
+++ b/organisation.html
@@ -80,29 +80,19 @@ body {
     <img src="/w3images/paris.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="hb1.jpg" style="width:100%">
-    <img src="hb2.jpg" style="width:100%">
+    <img src="hb1.JPEG" style="width:100%">
+    <img src="hb2.JPEG" style="width:100%">
     <img src="hb3.jpg" style="width:100%">
     <img src="hb4.jpg" style="width:100%">
-    <img src="hb10.jpg" style="width:100%">
+    <img src="hb10.JPG" style="width:100%">
   </div>  
   <div class="column">
-    <img src="hb11.jpg" style="width:100%">
-    <img src="hb12.jpg" style="width:100%">
+    <img src="hb11.JPG" style="width:100%">
+    <img src="hb12.JPG" style="width:100%">
     <img src="hb13.jpg" style="width:100%">
     <img src="hb14.jpg" style="width:100%">
-    <img src="hb15.jpg" style="width:100%">
-    <img src="hb16.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="hb1.jpg" style="width:100%">
-    <img src="hb2.jpg" style="width:100%">
-    <img src="hb3.jpg" style="width:100%">
-    <img src="hb13.jpg" style="width:100%">
-    <img src="hb14.jpg" style="width:100%">
-    <img src="hb15.jpg" style="width:100%">
-    <img src="hb16.jpg" style="width:100%">
-   
+    <img src="hb15.JPG" style="width:100%">
+    <img src="hb16.JPG" style="width:100%">
   </div>
 </div>
 
