--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <a class="nav-link" href="#" style="font-size: 25px; color: black; background-color: burlywood;">Wondmaya Jigar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact us.html" style="font-size: 25px; color: black;background-color: turquoise;">Mai Che Zoo Che Manz</a>
+          <a class="nav-link" href="organisation.html" style="font-size: 25px; color: black;background-color: turquoise;">Mai Che Zoo Che Manz</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="contact us.html" style="font-size: 25px; color: black;background-color: turquoise;">Balai Lagai Che</a>
+            <a class="nav-link" href="organisation.html" style="font-size: 25px; color: black;background-color: turquoise;">Balai Lagai Che</a>
           </li>
       </ul>
   </div>
