--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="background-color: darkgray;">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Citizens</a>
+        <a class="navbar-brand" href="#">I Love You, Nonu</a>
       
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -28,13 +28,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item" style="overflow-x:visible; color: whites;">
-              <a class="nav-link" href="rti.html">RTI</a>
+              <a class="nav-link" href="rti.html">Love You</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Enforcement Data</a>
+              <a class="nav-link" href="#">Miss You</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Consumer Corner</a>
+              <a class="nav-link" href="#">Wondmaya Che Zoo</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="#">Balai Lagaya Che</a>
             </li> 
           </ul>
         </div> 
@@ -80,7 +83,7 @@
     <h1>Words for You</h1>
     <p>You are the person who has brought a meaning to my life</p>
     <blockquote class="blockquote">
-      <p style="color: black; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">Sana, As a lover i have always felt a warmth in my heart that such a wonderful girl has this destination choosed for me. Sana the most beautiful thing about you i have been always loving is that you are very soft-hearted and happening human being. The way you love and care about me is heart-touching and delightful. Thank you for making me special.</p>
+      <p style="color: black; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">Sana, As a lover i have always felt a warmth in my heart that such a wonderful girl has this destination choosed for me. Sana the most beautiful thing about you i have been always loving is that you are very soft-hearted and happening human being. The way you love and care about me is heart-touching and delightful.I will always be your love and i am eagerly waiting for the day when i will marry you and make you mine forever. May Allah bless you and make each and every moment of your life an amazing event and fill your heart by the sweetest memories of our relationship. You care a lot for my little things and your support in my life will inshallah help me to be motivated towards my dream. i love you immenesly. Many many returns of the day, Happy Birthday Jaan and May Allah always keep you healthy and happy. You are beautiful so is your way of loving me. Thank you for making me special.</p>
       <footer class="blockquote-footer">Aamir Hameed</footer>
     </blockquote>
   </div>
