--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <br>
     <hr>
     <blockquote class="blockquote">
-      <p style="color: black; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Zinda hona zindagi ka maksad nahi <br> Jee to hum phele b rahe thay <br> Tum ne jo mujhe jeena sekhadiya"</p>
+      <p style="color:green;text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Zinda hona zindagi ka maksad nahi <br> Jee to hum phele b rahe thay <br> Tum ne jo mujhe jeena sekhadiya"</p>
       <footer class="blockquote-footer">Aamir Hameed</footer>
     </blockquote>
     <br>
     <hr>
     <blockquote class="blockquote">
-      <p style="color: black; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Log rotay hain fariyad mai, aye rub humay Jannat naseeb ho <br> Mai to Ishq mai rota hu, ki mujhe apna pyaar hasil ho" </p>
+      <p style="color:white;text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Log rotay hain fariyad mai, aye rub humay Jannat naseeb ho <br> Mai to Ishq mai rota hu, ki mujhe apna pyaar hasil ho" </p>
       <footer class="blockquote-footer">Aamir Hameed</footer>
     </blockquote>
   </div>
