--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item" style="overflow-x:visible; color: whites;">
-              <a class="nav-link" href="rti.html">Love You</a>
+              <a class="nav-link" href="#">Love You</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Miss You</a>
@@ -46,8 +46,8 @@
 <div class="jumbotron text-center">
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Happy Birthday Sana</h1>
-  <h2 class="display-5">Your Existence Makes Me Exist</h2>
-  <p>This is the most beautiful day in my life, So are you</p> 
+  <h2 class="display-5">Your Existence Makes Me Exist!!</h2>
+  <p>This is the most beautiful day in my life, You are the most Beautiful Person</p> 
 </div>
 </div>
 <style>
@@ -63,7 +63,7 @@
           <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 25px; display: block; border-width: thick; border-color: black; color: white;">Love You Jigar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">I Miss Ew </a>
+          <a class="nav-link" href="rti.html" style="background-color: rgb(144, 161, 144); color: white; font-size: 25px;">I Miss Ew </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" style="font-size: 25px; color: black; background-color: burlywood;">Wondmaya Jigar</a>
