--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="jumbotron text-center">
     <div class="container p-4 my-3 bg-grey text-black">
-        <h1 class="display-3">Happy Birthday Sana</h1>
+        <h1 class="display-3">Aamir Loves Sana</h1>
   <h2 class="display-5">Your Existence Makes Me Exist!!</h2>
   <p>This is the most beautiful day in my life, You are the most Beautiful Person</p> 
 </div>
@@ -55,7 +55,7 @@
         padding-top: 0px; padding-inline-start: 10px; border-top: 20px;
     }
 </style>
-  <div class="container-fluid width:100%">
+  <div class="container-fluid">
     <ul class="nav justify-content-center">
     <ul class="nav">
         <ul class="nav nav-pills">
