--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 </head>
-<body style="background-color: blue;">
+<body style="background-color: rgb(243, 116, 116)">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <!-- Brand -->
         <a class="navbar-brand" href="#">I Love You, Nonu</a>
