--- a/index.html
+++ b/index.html
@@ -55,25 +55,16 @@
         padding-top: 0px; padding-inline-start: 10px; border-top: 20px;
     }
 </style>
-  <div class="container-fluid">
+  <div class="container-fluid width=50%">
     <ul class="nav justify-content-center">
     <ul class="nav">
         <ul class="nav nav-pills">
             <li class="nav-item">
-          <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 10px; display: block; border-width: thick; border-color: black; color: white;">Love You Jigar</a>
+          <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 20px; display: block; border-width: thick; border-color: black; color: white;">I Love You </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rti.html" style="background-color: rgb(144, 161, 144); color: white; font-size: 10px;">I Miss Ew </a>
+          <a class="nav-link" href="rti.html" style="background-color: rgb(144, 161, 144); color: white; font-size: 20px;">I Miss You </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="font-size: 10px; color: black; background-color: burlywood;">Wondmaya Jigar</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="organisation.html" style="font-size: 10px; color: black;background-color: turquoise;">Mai Che Zoo Che Manz</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="organisation.html" style="font-size: 10px; color: black;background-color: turquoise;">Balai Lagai Che</a>
-          </li>
       </ul>
   </div>
   <br>
@@ -89,7 +80,7 @@
     <br>
     <hr>
     <blockquote class="blockquote">
-      <p style="color:green;text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Zinda hona zindagi ka maksad nahi <br> Jee to hum phele b rahe thay <br> Tum ne jo mujhe jeena sekhadiya"</p>
+      <p style="color:white;text-align: center; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: justify; text-decoration: black;font-weight: bolder; font-size: medium;">"Zinda hona zindagi ka maksad nahi <br> Jee to hum phele b rahe thay <br> Tum ne jo mujhe jeena sekhadiya"</p>
       <footer class="blockquote-footer">Aamir Hameed</footer>
     </blockquote>
     <br>
