--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div> 
       </nav> 
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" style="background-image: url(hb18.jpg);background-size:cover;">
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Aamir Loves Sana</h1>
   <h2 class="display-5">Your Existence Makes Me Exist!!</h2>
