--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div class="jumbotron text-center" style="background-image: url(hb18.jpg);background-size:cover;">
     <div class="container p-4 my-3 bg-grey text-black">
         <h1 class="display-3">Aamir Loves Sana</h1>
-  <h2 class="display-5">Your Existence Makes Me Exist!!</h2>
-  <p>This is the most beautiful day in my life, You are the most Beautiful Person</p> 
+  <h2 class="display-5" style="color:white;">Your Existence Makes Me Exist!!</h2>
+  <p style="color:white;">This is the most beautiful day in my life, You are the most Beautiful Person</p> 
 </div>
 </div>
 <style>
@@ -60,10 +60,10 @@
     <ul class="nav">
         <ul class="nav nav-pills">
             <li class="nav-item">
-          <a class="nav-link" href="organisation.html" style="border-color: black;background-color: coral; font-size: 20px; display: block; border-width: thick; border-color: black; color: white;">I Love You </a>
+          <a class="nav-link" href="organisation.html" style="border-color: black;background-color: black; font-size: 20px; display: block; border-width: thick; border-color: black; color: white;">I Love You </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="rti.html" style="background-color: rgb(144, 161, 144); color: white; font-size: 20px;">I Miss You </a>
+          <a class="nav-link" href="rti.html" style="background-color: black; color: white; font-size: 20px;">I Miss You </a>
         </li>
       </ul>
   </div>
