--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body style="background-color: rgb(243, 116, 116)">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg"style="color:rgb(243, 116, 116);">
         <!-- Brand -->
         <a class="navbar-brand" href="#">I Love You, Nonu</a>
       
